<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SubActivity">

    <TextView
        android:id="@+id/txtText"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sub_activity"/>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/back"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/txtId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/txtPw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pw"
        android:textSize="30sp" />

</LinearLayout>